--- a/breweryCompany/package.json
+++ b/breweryCompany/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
